added a combined readme file

--- a/TemperaturePrediction/temperaturePredictionFinal.ipynb
+++ b/TemperaturePrediction/temperaturePredictionFinal.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "88617853",
+   "metadata": {},
+   "source": [
+    "Fall Back code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "42e9c16f",
+   "id": "a7bff93a",
    "metadata": {
     "collapsed": true
    },
@@ -459,14 +467,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "186d4188",
+   "id": "bf41cb5a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "cd3f8cdd",
+   "id": "e1045435",
    "metadata": {},
    "source": [
     "Updated code"
@@ -475,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "cef6f33e",
+   "id": "42751d10",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a6d91b4",
+   "id": "51a21552",
    "metadata": {},
    "outputs": [],
    "source": []
